--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,20 @@
-name: Streamlit Deployment
+name: Unit Testing
 
-on: [push, pull_request]
+on:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  windows:
+    name: Windows Unit Testing
+    runs-on: windows-2019
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'  # Replace '3.x' with your desired Python version
-
-    - name: Upgrade pip
-      run: python -m pip install --upgrade pip
-
-    - name: Install dependencies
-      run: pip install -r requirements.txt
-
-    - name: Run Streamlit
-      run: streamlit run app.py  # Replace 'app.py' with the path to your Streamlit app file
+      - name: Upgrade pip
+        run: pip install --upgrade pip
