--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,1 @@
-name: Unit Testing
-
-on:
-
-jobs:
-  windows:
-    name: Windows Unit Testing
-    runs-on: windows-2019
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-    steps:
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Upgrade pip
-        run: pip install --upgrade pip
+pip install --upgrade pip
