--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,19 @@
-pip install --upgrade pip
+name: Upgrade Package
+
+on:
+  push:
+    branches: [main]
+
+jobs:
+  upgrade:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'  # Replace with your Python version
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Upgrade package
+        run: pip install --upgrade package_name
