--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'  # Replace with your Python version
+          python-version: '3.12.3'  # Replace with your Python version
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Upgrade package
-        run: pip install --upgrade package_name
+        run: pip install --upgrade pip
